[Issue #916] fix small bugs of IndexServiceImpl, add benchmark test of getUniqueRowId